# sharedBikes

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  pyproject.toml  ruff.toml
.github/: ARCHITECT_PRS.md
.github/workflows/: ryobot.yml
backend/: Makefile  check_phase_d_imports.py  database.py  engine.py  main.py  models.py  orm_models.py  pyproject.toml  requirements.txt  ruff.toml
backend/api/: __init__.py  health.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: router.py  ws.py
backend/app/core/: __init__.py  achievement.py  achievements.py  city.py  city_config.py  config.py  coord.py  costing.py  dispatch_cost.py  engine.py  event_bus.py  finance.py  fleet.py  pricing.py  satisfaction.py  scheduler.py  station_generator.py  trip_executor.py  weather.py
backend/app/models/: __init__.py  domain.py  events.py  npc.py  schemas.py
backend/app/services/: __init__.py  balance_service.py  city_loader.py  command_handler.py  demand_service.py  engine_manager.py  game_session.py  leaderboard_service.py  map_service.py  osm_parser.py  procedural_city_generator.py  services.py
backend/app/utils/: __init__.py  geo.py
backend/app/visualization/: __init__.py  flow.py  heatmap.py  renderer.py  rendering.py
backend/data/cities/: beijing.toml
backend/tests/: __init__.py  _read_files.py  conftest.py  test_achievement.py  test_achievements.py  test_balance_service.py  test_city.py  test_city_config.py  test_command_handler.py  test_costing.py  test_engine.py  test_event_bus.py  test_finance.py  test_fleet.py  test_game_session.py  test_geo.py  test_leaderboard.py  test_map_service.py  test_map_service_ac27.py  test_osm_parser.py  test_phase1_integration.py  test_phase_d.py  test_pr65_smoke.py  test_pricing.py  test_scheduler.py  test_station_generator.py  test_weather.py  test_ws.py
backend/tests/fixtures/: README.md
backend/tests/fixtures/osm/: broken_ref.osm  empty.osm  small_grid.osm
config/cities/: beijing.yml
data/: README.md
docs/: architecture.md
frontend/: README.md  index.html
memory/: INDEX.md  abstract-coord-architecture-decision.md  arch-doc-phase-c-status-fixed.md  architecture-doc-phase7b-complete.md  docstring-drift-pattern.md  engine-needs-async-drive-loop.md  heatmap-demand-factor-pattern.md  leaderboard-architecture-pattern.md  leaderboard-implementation-complete.md  phase-a-abstract-coord-complete.md  phase-b-canvas-frontend-dispatched.md  phase-c-game-loop-complete.md  phase-c-game-loop-design.md  phase-c-game-loop-dispatched.md  phase-d-npc-commute-rfc-dispatched.md  phase6-complete.md  procedural-config-wiring-pattern.md  property-with-params-pitfall.md  rebalance-strategy-interface-contract.md  roadmap-md-sync-after-merge.md  roadmap-md-synced-phase56.md  roadmap-phase-d-synced.md  roadmap-phase7b-synced.md  roadmap-rewrite-abstract-direction.md
scripts/: cleanup-stale-branches.sh  demo_phase1.py  setup.sh
src/citybike/: __init__.py  __main__.py
src/citybike/api/: __init__.py  app.py  routes.py
src/citybike/city/: __init__.py  road_network.py  zone.py
src/citybike/core/: __init__.py  clock.py  engine.py  events.py  models.py  types.py
src/citybike/demand/: __init__.py  generator.py  patterns.py
src/citybike/dispatch/: __init__.py  scheduler.py  strategies.py
src/citybike/fleet/: __init__.py  bike_manager.py
src/citybike/geography/: __init__.py  osm_parser.py
tests/: conftest.py  test_api.py  test_city.py  test_engine.py  test_geo.py
