[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "citybike-sim"
version = "0.1.0"
description = "Urban Bike Sharing Operations Simulator"
requires-python = ">=3.11"
license = { text = "MIT" }
dynamic = ["dependencies"]

[project.optional-dependencies]
geo = [
    "osmnx>=1.9",
    "shapely>=2.0",
    "networkx>=3.1",
]
viz = [
    "matplotlib>=3.7",
    "contextily>=1.3",
]
api = [
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "pydantic>=2.5",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["tests/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
