[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "citybike-sim"
version = "0.1.0"
description = "CityBike-Sim: Urban Operator - 基于真实城市地理数据的硬核模拟经营游戏"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "CityBike-Sim Contributors" },
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "shapely>=2.0.0",
    "geopandas>=0.14.0",
    "numpy>=1.26.0",
    "networkx>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
viz = [
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG"]

[tool.mypy]
strict = true
python_version = "3.11"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
